# python-testing-intro

./: README.md  main.py  main_test.py  pyproject.toml
.github/workflows/: python-app.yml  python-test.yml
