[tool.poetry]
name = "python-testing-intro"
version = "0.1.0"
description = ""
authors = ["Alison Clarke <alison.r.clarke@durham.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
